--- a/.github/workflows/working-dir-and-shells.yaml
+++ b/.github/workflows/working-dir-and-shells.yaml
@@ -32,6 +32,6 @@ jobs:
                 echo $env:GITHUB_WORKSPACE
             - name: Python Shell
               shell: python
-              run:
+              run: |
                 import platform
                 print(platform.processor())
